# lvpn

./: Dockerfile  Dockerfile-win  README.md  build-deb.sh  build-docker.sh  build-exe.cmd  build-exe.ps1  build-msi.cmd  build-msi.ps1  buildozer.spec  client.py  entrypoint.sh  install-all-in-one.ps1  lvpnc-debug.cmd  lvpnc.cmd  mgmt.py  ptwbin.py  requirements-lite.txt  requirements.txt  server.py  setup.cfg  setup.ps1  setup.py
client/: __init__.py  arguments.py  connect.py  connection.py  daemon.py  gui.py  gui_connect.py  gui_status.py  gui_switcher.py  gui_wallet.py  gui_wizard.py  http.py  preconnect.py  proxy.py  requirements.txt  sshproxy.py  tlsproxy.py  wallet.py  wg.py  wg_service.py
config/: api.yaml  lvpn.kv
config/gates/: 1st-http-proxy-tls.lgate  1st-socks.lgate  (+21 more)
debian/: changelog  control  rules
lib/: __init__.py  arguments.py  authid.py  authids.py  daemon.py  db.py  gate.py  market.py  messages.py  mngrrpc.py  provider.py  queue.py  registry.py  runcmd.py  service.py  session.py  sessions.py  shared.py  signverify.py  space.py  util.py  vdp.py  vdpobject.py  wallet.py  wg_engine.py  wg_service.py  wizard.py
misc/: combine-openapi-files.sh  easy-provider.sh  profile-inc.sh
server/: __init__.py  arguments.py  http.py  proxy.py  requirements.txt  stripe.py  wallet.py  wg_service.py
tests/: api.py  api_client_session.py  api_clientsession.py  api_server_session.py  api_server_stripe_link.py  api_server_vdp.py  api_stripe_link.py  connection.py  gui.py  proxies.py  runproc.py  sessions.py  tests.sh  util.py  vdp.py  wg_engine.py  wg_service.py
(+34 files in other folders)
