[metadata]
name = lvpn
version = 0.3
author = Lukas Macura
author_email = lukas.macura@gmail.com
description = Lethean VPN Client and Server
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = VPN, Wireguard, Socks, Proxy, TLS
license = GPLv3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
lvpn = config/templates/*,config/gates/*,config/api.yaml

[options.entry_points]
console_scripts =
    lvpnc = client:main
    lvpns = server:main
    lmgmt = mgmt:main
    ptw = client.ptwbin.main
